PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- Fixed compilation on BSD and OSX (thanks to tittof and Hujer)
		- Prettified output at --(full)config of status_bar_type and crc_algo
		- Fixed bugs in invite.sh outputting "-e" and bad timeformat (fixed by rbt)
		- Implemented slice-by-4/8 based on Stephan Brumme's cpp code.
		  Introducing a new config option: crc_algo where you can decide
		  to keep using the standard algo or slice-by-4 or slice-by-8 (default).
		  This code is used when rescanning or when you don't use calc_crc in glftpd.
		- Fixed "make utils" not able to compile (thanks to tittof for noticing)
		- Fix GameFAQs sitebot plugin's rating and description
		- Fix overwriting of LDFLAGS when enabling FLAC (fixed by tittof)
		- Make configure more portable
		- Remove bashisms from the configure script
		- Move mp3 year checking code so it applies on flac files too
		- Clean up mp3 tag info gathering
		- Fix crashing zipscript when junk is present in the ID3-year tag and id3_year is used in the completebar (fixed by capone)
		- Added socks5 proxy support for TVRage sitebot plugin (based on code by crx)
		- Fix swapped arguments in dl_speedtest (fixed by rbt)
		- Enhance AutoOp sitebot plugin to handle any availible IRC mode. Renamed to AutoIRCFlag.
		- Fixed bug #535: !bnc command failing to parse ping reply on BSD
		- Fix deletion of .message when deleting a dir (fixed by DuReX)
		- Fix ng-chown being unable to change usernames when a user_name was given (thanks to tittof for noticing)
		- Added warnings to ng-chown when zsconfig-settings conflict with given params
		- Fix configure working with any future glftpd v2.04 up to v2.09
		- Fix GameFAQs sitebot plugin
		- Fix configure working with glftpd 2.03
		- Add .log to the allowed_types by default
		- Update default allowed_years to include 2014
		- ^--- 2014 ---^
		- Change "Psychadelic" to "Psychedelic". According to ID3
		  there is no ID3 genre standard: Q5 at http://id3.org/FAQ